<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.hivislav.nasaexplorer.view.MainActivity">
    <item
        android:id="@+id/navBottomPicOfTheDay"
        android:icon="@drawable/ic_pic_of_the_day"
        android:title="@string/nav_bottom_pic_of_the_day"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navBottomPlanets"
        android:icon="@drawable/ic_planets"
        android:title="@string/nav_bottom_planets"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navBottomSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_bottom_settings"
        app:showAsAction="ifRoom" />

</menu>